15750
Given the the following files:

`p/J.java`
```scala
package p;
public class J {
    protected void m() { return; }
}
```

`p/q/S.scala`
```scala
package p.q
class S extends p.J {
  protected[p] override def m() { }
}
```

When compiling first the Java file and then the Scala file, things work as expected:
```scala
lamppc11:bug2 luc$$ javac p/J.java 
lamppc11:bug2 luc$$ ../../target/pack/bin/scalac p/q/S.scala 
lamppc11:bug2 luc$$ 
```

However, compiling them together with `scalac` gives an error message:
```scala
lamppc11:bug2 luc$$ ../../target/pack/bin/scalac p/J.java p/q/S.scala 
p/q/S.scala:4: error: method m overrides nothing
  protected[p] override def m() { }
                            ^
one error found
```
